# cmake-project-template

./: .gitignore  CMakeLists.txt  README.md
